--- a/css/style.css
+++ b/css/style.css
@@ -107,4 +107,8 @@ body {
 .post-tags p {
   margin: 0 10px 0 0;
 }
+
+.post-tags .list li {
+  padding: 0 5px;
+}
 /*# sourceMappingURL=style.css.map */
